# webgl_demo

./: Cargo.toml  Makefile  index.html  index.js
pkg/: webgl.js  webgl_bg.wasm
src/: lib.rs
