[package]
name = "webgl"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.48"
console_log = "*"
log = "0.4.8"
console_error_panic_hook = "*"
usvg = { version = "0.9", default-features = false }
pathfinder_view = { git = "https://github.com/s3bk/pathfinder_view" }
pathfinder_svg = { git = "https://github.com/s3bk/pathfinder" }
web-sys = { version = "*", features = ["HtmlCanvasElement"]}
